# clipcount

./: CHANGELOG.md  README.md  README_en.md  pyproject.toml  setup.cfg
clipcount/: __init__.py
src/clipcount/: __init__.py  cli.py  core.py  usage.py
