[project]
name = "clipcount"
version = "1.0.2"
description = "Reads the clipboard and outputs the character count."
authors = [
    {name = "yusu79",email = "oss@yusu79.com"}
]
readme = "README_en.md"
requires-python = ">=3.13"
dependencies = [
    "pyperclip (>=1.10.0,<2.0.0)"
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://yusu79.com"
Repository = "https://github.com/yusu79/clipcount"
Changelog = "https://github.com/yusu79/clipcount/blob/main/CHANGELOG.md"

[project.scripts] # cli.pyに登録されたmain関数を直接実行できる
clipcount = "clipcount.cli:main" 

[tool.poetry]
packages = [{include = "clipcount", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
